                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 28-11-2005 added: Workaround for ReadFile() returning incorrect data at the DVD layer change - requires special version
                     of libdvdcss-2.dll (rename from libdvdcss-2.dll_layerchangehack).
 - 28-11-2005 fixed: Notifications were only showing if Kai was enabled.
 - 28-11-2005 fixed: Shuffle in Slideshow screensaver was disregarded.
 - 28-11-2005 added: Support for comma's in stacked file names.
 - 28-11-2005 fixed: same navigational bug in my pictures.
 - 28-11-2005 fixed: small navigational bug in my videos.
 - 27-11-2005 added: support for multipath bookmarks in video and pictures. its still very much experimental. use at your own risk.
 - 27-11-2005 fixed: my previous fix for paths ending with '//' caused more problems than it fixed.
 - 27-11-2005 added: manual overriding of destination path when ripping cds without cddb.
 - 27-11-2005 fixed: paths ending in '://' and ':\' were handled wrongly. thanks to deanrparty.
 - 27-11-2005 changed: Cleaned up the file stacking code, implementing a stack:// virtual directory.
 - 26-11-2005 updated: [ 1365798 ] Updated KAI-Vectors, thx to flymaster!
 - 26-11-2005 added: two new virtual directories for use in bookmarks: $MUSICPLAYLISTS, $VIDEOPLAYLISTS.
 - 26-11-2005 fixed: thumbs and databases should work again! (you may need to regenerate thumbs in my pictures)
 - 26-11-2005 fixed: httpapi GetDirectory command with local non-directory or local empty directory parameter
 - 25-11-2005 added: <loop> tag to MultiImage control.
 - 25-11-2005 fixed: Textures outside of Textures.xpr were failing to load.